# SovaReqBot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  filters.py  instances.py  keyboards.py  logger.py  middlewares.py  states.py
app/config/: __init__.py  commands.py  labels.py
app/database/: __init__.py  models.py  requests.py
app/roles/: __init__.py  admin.py  moderator.py  user.py
app/utils/: errors.py  file_forwarder.py  parser.py
