[tool.poetry]
name = "sovareqbot"
version = "0.1.0"
description = ""
authors = ["Egor <evkorgun.kpr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
fastapi = "^0.115.7"
requests = "^2.32.3"
uvicorn = "^0.34.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
